@@ -8,6 +8,8 @@ released versions.
 * `%var{...}` now expands to list of strings, `$kak_quoted_...` now work
   as expected with these.
 
+* Replace NCursesUI with a custom terminal UI implementation
+
 == Kakoune v2020.01.16
 
 * Expose history tree through `$kak_history` and
